--- a/cluster3-myapps-appset.yaml
+++ b/cluster3-myapps-appset.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: cluster3-myapps
-  namespace: default
+  namespace: argocd
 spec:
   generators:
   - git:
